<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/grp_relax">

        <ListPreference
            android:defaultValue="@string/def_relax_descansar"
            android:dialogTitle="@string/dgt_relax_descansar"
            android:entries="@array/ent_relax_descansar"
            android:entryValues="@array/val_relax_descansar"
            android:key="@string/key_relax_descansar"
            android:summary="@string/sum_relax_descansar"
            android:title="@string/tit_relax_descansar" />

        <EditTextPreference
            android:defaultValue="@string/def_relax_nombreAlarma"
            android:key="@string/key_relax_nombreAlarma"
            android:title="@string/tit_relax_nombreAlarma"
            app:defaultValue="@string/def_relax_nombreAlarma"
            app:summary="@string/sum_relax_nombreAlarma" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/grp_pantalla">

        <ListPreference
            android:defaultValue="@string/def_pantalla_apagar"
            android:dialogTitle="@string/dgt_pantalla_apagar"
            android:entries="@array/ent_pantalla_apagar"
            android:entryValues="@array/val_pantalla_apagar"
            android:key="@string/key_pantalla_apagar"
            android:summary="@string/sum_pantalla_apagar"
            android:title="@string/tit_pantalla_apagar" />

        <SeekBarPreference
            android:defaultValue="@integer/def_pantalla_tamanioFuente"
            android:key="@string/key_pantalla_tamanioFuente"
            android:max="@integer/max_pantalla_tamanioFuente"
            android:summary="@string/sum_pantalla_tamanioFuente"
            android:title="@string/tit_pantalla_tamanioFuente"
            app:min="@integer/min_pantalla_tamanioFuente" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_pantalla_modoObscuro"
            android:title="@string/tit_pantalla_modoObscuro" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/grp_conn">

        <MultiSelectListPreference
            android:defaultValue="@array/empty_array"
            android:entries="@array/ent_conn_limitarDatos"
            android:entryValues="@array/val_conn_limitarDatos"
            android:key="@string/key_conn_limitarDatos"
            android:summary="@string/sum_conn_limitarDatos"
            android:title="@string/tit_conn_limitarDatos" />

        <MultiSelectListPreference
            android:defaultValue="@array/empty_array"
            android:dialogTitle="@string/dgt_conn_descargarVideo"
            android:entries="@array/ent_conn_descargarVideo"
            android:entryValues="@array/val_conn_descargarVideo"
            android:key="@string/key_conn_descargarVideo"
            android:summary="@string/sum_conn_descargarVideo"
            android:title="@string/tit_conn_descargarVideo" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_conn_modoRestrictivo"
            android:summary="@string/sum_conn_modoRestrictivo"
            android:title="@string/tit_conn_modoRestrictivo" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_conn_estadisticasUso"
            android:title="@string/tit_conn_estadisticasUso" />

    </PreferenceCategory>

</PreferenceScreen>